--- a/multi-entry-points/index.html
+++ b/multi-entry-points/index.html
@@ -6,6 +6,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script src="dist/bundle.js"></script>
+  <script src="dist/js/index.js"></script>
 </body>
 </html>
