--- a/react/index.html
+++ b/react/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- <link rel="stylesheet" href="dist/css/home.css"> -->
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
 </head>
-<p>Holi señor webpack, gracias por existir.-</p>
 <body>
-  <script src="./dist/js/home.js"></script>
+  <section id="container"></section>
 </body>
 </html>
